--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "version": "0.0.7",
   "dependencies": {
-    "@calcit/procs": "^0.8.1"
+    "@calcit/procs": "^0.8.1",
+    "cos-nodejs-sdk-v5": "^2.12.4"
   },
   "scripts": {},
   "devDependencies": {}
